<resources>
    <string name="app_name">eFarmers</string>
    <string name="copyright_m">copyright \u00A9 eFarmers. </string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="have_no_account">Have no account !</string>
    <string name="sign_up">Sign up</string>
    <string name="error_username">Username/Email is required</string>
    <string name="error_password">Password is required</string>
    <string name="add_farmers">Add Farmers</string>
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="years_farming">Years of Farming</string>
    <string name="type_farming">Type of Farming</string>
    <string name="farm_address">Farm Address</string>
    <string name="click_in_circle">Click in circle to select image</string>
    <string name="google_maps_key">AIzaSyD1tt4GSw9MSebyHaIQK9mU5xXpJ4QoKRM</string>
    <string name="permission_denied">Permission not granted</string>
    <string name="uploadImages">Set your image</string>
    <string name="sorry_error">error</string>
    <string name="farm_name">Farm name</string>
    <string name="select_image">Please select or take a profile image</string>
    <string name="error_name">Full name is required</string>
    <string name="error_age">Age is required</string>
    <string name="error_farm_name">farm name is required</string>
    <string name="error_years_farming">Years of farming is required</string>
    <string name="error_type_farming">type of farming is required</string>
    <string name="error_address">farm address is required</string>
    <string name="number_of_farmers"><![CDATA[Number of captured farmers & farms]]></string>
    <string name="farmers_number">0</string>
    <string name="no_farmer_record">No farmer record, start creating one</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="years_of_farming">Years of farming</string>
    <string name="type_of_farming">Type of farming</string>
    <string name="farm_location">Farm location</string>
</resources>
