<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="500dp"
                tools:context=".ProfileActivity" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/agromall"
                app:civ_border_width="2dp"
                app:civ_border_color="#23a103"
                android:layout_below="@+id/map"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/profile_image"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:text="@string/name"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:textColor="@color/textColor"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/name"
                        tools:text="Button 2"
                        android:layout_width="0dp"
                        android:textColor="@color/textColor"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:text="@string/age"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:textColor="@color/textColor"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/age"
                        tools:text="Age"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:textColor="@color/textColor"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:text="@string/years_of_farming"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:textColor="@color/textColor"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/years_farming"
                        tools:text="Button 6"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:textColor="@color/textColor"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:text="@string/type_of_farming"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:textColor="@color/textColor"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/type_farming"
                        tools:text="Type of farming"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:textColor="@color/textColor"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/farm_name"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:textColor="@color/textColor"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/farm_name"
                        tools:text="Type of farming"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:textColor="@color/textColor"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/farm_location"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:textColor="@color/textColor"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/farm_location"
                        tools:text="Farm location"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:textColor="@color/textColor"
                        android:layout_height="80dp"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>